tufte.css
@font-face { font-family: ETBembo;
             src: url("ETBembo-RomanLF.ttf"); }
@font-face { font-family: ETBembo;
             src: url("ETBembo-DisplayItalic.ttf");
             font-weight: normal;
             font-style: italic; }

html { font-size: 11px; }

@media screen and (min-width: 800px)  { html{ font-size: 12px; }}
@media screen and (min-width: 900px)  { html{ font-size: 13px; }}
@media screen and (min-width: 1000px) { html{ font-size: 14px; }}
@media screen and (min-width: 1100px) { html{ font-size: 15px; }}
@media screen and (min-width: 1200px) { html{ font-size: 16px; }}
@media screen and (min-width: 1300px) { html{ font-size: 17px; }}

body { width: 87.5%;
       margin-left: auto;
       margin-right: auto;
       padding-left: 12.5%;
       font-family: ETBembo, Palatino, "Palatino Linotype", "Palatino LT STD", "Book Antiqua", Georgia, serif;
       background-color: #fffff8;
       color: #111;
       max-width: 1400px; }

h1 { font-weight: 400;
     margin-top: 4rem;
     margin-bottom: 1.5rem;
     font-size: 3.2rem;
     line-height: 1; }

h2 { font-style: italic;
     font-weight: 400;
     margin-top: 2.1rem;
     margin-bottom: 0;
     font-size: 2.2rem;
     line-height: 1; }

h3 { font-style: italic;
     font-weight: 400;
     font-size: 1.7rem;
     margin-top: 2rem;
     margin-bottom: 0;
     line-height: 1; }

subtitle { font-style: italic;
           margin-top: 1rem;
           margin-bottom: 1rem;
           font-size: 1.8rem;
           display: block;
           line-height: 1; }

table { width: 53%;
        text-align: right;
        font-size: 1.4rem;
        line-height: 1.4;
        margin-top: 1.4rem;
        margin-bottom: 1.4rem;
        margin-left: 1%;
        margin-right: 1%;
        border-top: 2px solid #333333;
        border-bottom: 2px solid #333333;
        border-collapse: separate;
        border-spacing: 0 5px;
        -webkit-font-feature-settings: 'tnum'; /* This is technically redundant */
        -moz-font-feature-settings: 'tnum';
        -ms-font-feature-settings: 'tnum'; }

thead th { border-bottom: 1px solid #333333;
           font-weight: 400;
           border-collapse: separate;
           border-spacing: 5px 5px;}

article { position: relative;
          padding: 5rem 0rem; }

section { padding-top: 1rem;
          padding-bottom: 1rem; }

p { font-size: 1.4rem;
    line-height: 2rem;
    margin-top: 1.4rem;
    margin-bottom: 1.4rem;
    padding-right: 0;
    vertical-align: baseline; }

blockquote p { font-size: 1.1rem;
               width: 50%; }

blockquote footer { width: 50%;
                    text-align: right; }

a { color: #222; }

img { max-width: 100%; }

sup, sub { vertical-align: baseline;
           position: relative;
           top: -0.4rem; }

sub { top: 0.4rem; }

sup.sidenote-number { font-size: 0.9rem;
                      color: #f00000; }

p, footer, pre.code { width: 55%; }

@media screen and (max-width: 600px) { p, footer, pre.code { width: 65%; }
                                       blockquote p, blockquote footer { width: 60%; }}
@media screen and (max-width: 400px) { p, footer, pre.code { width: 90%; }
                                       blockquote p, blockquote footer { width: 90%; }}

.sans { font-family: "Gill Sans", "Gill Sans MT", Calibri, sans-serif; }

.code { font-family: Consolas, "Liberation Mono", Menlo, Courier, monospace;
        color: #222;
        font-size: 1rem;
        line-height: 1.6; }

pre.code { padding: 0 2em; }

.fullwidth { max-width: 95%; } 

.sidenote, .marginnote { float: right;
                         clear: right;
                         margin-right: -60%;
                         width: 50%;
                         margin-top: 0;
                         margin-bottom: 0;
                         font-size: 1.0rem;
                         line-height: 1.96;
                         vertical-align: baseline;
                         position: relative; }

@media screen and (max-width: 600px) { .sidenote, .marginnote { width: 25%;
                                                                margin-right: -35%; }}
@media screen and (max-width: 400px) { .sidenote, .marginnote { display:none; }}

a.url { text-decoration: none;
        word-break: break-all;
        font-family: "Lucida Console", "Lucida Sans Typewriter", Monaco, "Bitstream Vera Sans Mono", monospace; }

span.newthought { font-variant: small-caps; }

